<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_movie"
        android:icon="@drawable/cinema"
        android:title="@string/label_movies" />

    <item
        android:id="@+id/navigation_tvshow"
        android:icon="@drawable/tv"
        android:title="@string/label_tvshows" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/star"
        android:title="@string/favorite" />

</menu>
