...
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/cardView"
                    app:layout_constraintTop_toTopOf="@+id/cardView" />

                <TextView
                    android:id="@+id/title_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimension_18"
                    android:layout_marginTop="@dimen/dimension_18"
                    android:layout_marginEnd="@dimen/dimens_10"
                    android:gravity="start"
...
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

                <TextView
                    android:id="@+id/description_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimension_18"
                    android:layout_marginTop="@dimen/dimens_10"
                    android:layout_marginEnd="@dimen/dimension_18"
                    android:text="@{tv.overview}"
...
